--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial.tex
@@ -21,6 +21,7 @@
 \def \GlobalResourcePath {./}
 \input{RB_DiscreteMorphology_Tutorial_0_content}
 \input{RB_DiscreteMorphology_Tutorial_1_content}
+\input{RB_DiscreteMorphology_Tutorial_3_content}
 \input{RB_DiscreteMorphology_Tutorial_2_content}
 `
 \bibliography{\GlobalResourcePath bayes}
