--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -9756,4 +9756,17 @@ They used a simple NNI for rooted trees},
   publisher = {University of Chicago Press Chicago, IL},
 }
 
+@Article{Beaulieu2016,
+  author    = {Beaulieu, Jeremy M and O'Meara, Brian C},
+  title     = {{Detecting hidden diversification shifts in models of trait-dependent speciation and extinction}},
+  journal   = SYSBIO,
+  year      = {2016},
+  volume    = {65},
+  number    = {4},
+  pages     = {583--601},
+  owner     = {hoehna},
+  publisher = {Oxford University Press},
+  timestamp = {2016.10.12},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
