--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_3_content.tex
@@ -15,12 +15,12 @@ Even though we will continue to use four areas (K, O, M, H) in this section, we 
 \centering
 \begin{tabular}{l|c|cc|cccccc}
 area & code & $a_{max}$ & $a_{min}$ & $g_{\bullet R}$ & $g_{\bullet K}$ & $g_{\bullet O}$ & $g_{\bullet M}$ & $g_{\bullet H}$  & $g_{\bullet Z}$ \\ \hline
-Older islands & R & -    & -    & - & 261 & 406 & 500 & 680 & 3900 \\
-Kauai         & K & 5.15 & 5.05 & - & -   & 145 & 239 & 419 & 3900 \\
-Oahu          & O & 3.7  & 2.2  & - & -   & -   & 059 & 239 & 3900 \\
-Maui Nui      & M & 1.8  & 1.3  & - & -   & -   & -   & 082 & 3900 \\
-Hawaii        & H & 0.7  & 0.3  & - & -   & -   & -   & -   & 3900 \\
-Mainland      & Z & -    & -    & - & -   & -   & -   & -   & - \\
+Older islands & R & - & - & - & 261 & 406 & 500 & 680 & 3900 \\
+Kauai & K & 5.15 & 5.05 & - & - & 145 & 239 & 419 & 3900 \\
+Oahu & O & 3.7  & 2.2  & - & -  & -  & 059 & 239 & 3900 \\
+Maui Nui & M & 1.8  & 1.3  & - & -  & -  & -  & 082 & 3900 \\
+Hawaii & H & 0.7  & 0.3  & - & -  & -  & -  & - & 3900 \\
+Mainland & Z & - & - & - & - & - & - & - & - \\
 \end{tabular}
 \caption{Hawaiian paleogeographic data.
 The six areas are given in Figure \ref{fig:hawaii_areas}.
@@ -181,7 +181,7 @@ Fix the base dispersal rate to 1
 
 \begin{snugshade}
 \begin{lstlisting}
-dispersal_rate <- 1.0
+dispersal_rate <- abs(1)
 \end{lstlisting}
 \end{snugshade}
 
@@ -213,7 +213,7 @@ When this condition is met, the dispersal rate is determined by the exponential 
 for (i in 1:n_epochs) {
   for (j in 1:n_areas) {
     for (k in 1:n_areas) {
-      dr[i][j][k] <- 0.0
+      dr[i][j][k] <- abs(0)
       if (connectivity[i][j][k] > 0) {
         dr[i][j][k]  := dispersal_rate * exp(-distance_scale * distances[j][k])
       }
