restructure morpho CTMC tutorial

--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_2_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_2_content.tex
@@ -2,7 +2,11 @@
 
 The instantaneous rate matrix encodes the transition rates between all pairs of evolutionary states.
 It is important to emphasize that all rate matrices are assertions about how morphological evolution operates.
-Depending on how one populates the rate matrix elements, different evolutionary hypotheses may be expressed.
+Depending on how one populates the rate matrix elements, different evolutionary hypotheses may be expressed. \par
+
+When we model morphological data, unlike nucleotide data, each change may require multiple genetic changes.
+Getting to one state may require going through another.
+In short, it is probably not likely that one single model describes all characters well. \par 
 
 
 \subsection{Symmetric unordered}
